# mirrored_repo

./: .cproject  .gitignore  CMakeLists.txt  Makefile  README.md  loadable_elf_example_test.py  partitions.csv  sdkconfig  sdkconfig.old
ble/: ble.cc  ble.h  ble_server.cc  ble_server.h  ble_uart_server.c  ble_uart_server.h
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  main.cc  main.h
serial/: uart.cc  uart.h
util/: esp_util.cc  esp_util.h  fields.cc  fields.h  log.h  peripherals.cc  peripherals.h
wifi/: tcp.cc  tcp.h  tcp_server.cc  tcp_server.h  wifi_setup.c  wifi_setup.h
